Add Export Quotes button to HTML

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -11,7 +11,7 @@
     <button id="newQuote">Show New Quote</button>
     <button id="lastQuote">Show Last Quote</button>
     <div id="addQuoteForm"></div>
-    <button id="exportQuotes">Export Quote</button>
+    <button id="exportQuotes">Export Quotes</button>
     <input type="file" id="importFile" accept=".json">
     <script src="script.js"></script>
   </body>
