Implement dynamic content filtering and enhance quote management.

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Enhanced Dynamic Quote Generator</h1>
+    <select id="categoryFilter">
+        <option value="all">All Categories</option>
+    </select>
     <div id="quoteDisplay"></div>
     <button id="newQuote">Show New Quote</button>
     <button id="lastQuote">Show Last Quote</button>
